--- a/src/scolastiche-2022/contest/m-6-numero-spaccato-in-4/question.mdx
+++ b/src/scolastiche-2022/contest/m-6-numero-spaccato-in-4/question.mdx
@@ -45,13 +45,14 @@ export function buildVariant(n, wrong) {
         split,
         result,
     };
+
 }
 
 export const variants = [
-    buildVariant("51498735", [15, 24, 26, 42]),
-    buildVariant("78234159", [12, 28, 39, 44]),
-    buildVariant("52729913", [7, 20, 29, 38]),
-    buildVariant("57123169", [7, 25, 34, 36]),
+  buildVariant("51498735", [15, 24, 26, 42]),
+  buildVariant("78234159", [12, 28, 39, 44]),
+  buildVariant("52729913", [7, 20, 29, 38]),
+  buildVariant("57123169", [7, 25, 34, 36]),
 ];
 
 Sandra prende il numero $\js{n}$, ne spezza le cifre in $4$ parti tutte maggiori di $0$, e calcola la somma dei $4$ numeri ottenuti. Ad esempio, una possibile suddivisione è $\js{exampleSplit[0]} + \js{exampleSplit[1]} + \js{exampleSplit[2]} + \js{exampleSplit[3]} = \js{exampleSum}$.
@@ -65,11 +66,9 @@ Sia $x$ la **massima** somma possibile. Qual è la somma delle cifre di $x$?
 - [ ] $\js{wrong[3]}$
 
 > La risposta è $\js{correct}$.
-> 
-> Affinché la somma sia massima, una delle tre parti in cui viene suddiviso il numero deve avere il numero massimo possibile di cifre (cioè $5$), e le altre tre parti devono essere tutte di una cifra.
-> Ci sono $4$ modi di suddividere il numero in questo modo.
-> Si possono provare tutti, oppure si può ulteriormente osservare che la somma massima $x$ si ottiene quando il pezzo di $5$ cifre ha il valore più alto possibile, che in questo caso è $\js{maxPiece}$.
-> 
+>
+> Affinché la somma sia massima, una delle tre parti in cui viene suddiviso il numero deve avere il numero massimo possibile di cifre (cioè $5$), e le altre tre parti devono essere tutte di una cifra. Ci sono $4$ modi di suddividere il numero in questo modo. Si possono provare tutti, oppure si può ulteriormente osservare che la somma massima $x$ si ottiene quando il pezzo di $5$ cifre ha il valore più alto possibile, che in questo caso è $\js{maxPiece}$.
+>
 > Dunque $x = \js{split.join(' + ')} = \js{result}$, e la somma delle sue cifre è $\js{correct}$.
 >
 > ![Statistiche risposte]({n}.svg)
