--- a/src/scolastiche-2022/contest/m-8-potenze-di-10/question.mdx
+++ b/src/scolastiche-2022/contest/m-8-potenze-di-10/question.mdx
@@ -20,15 +20,16 @@ export function buildVariant(n) {
         decimal,
         sumDigits,
     };
+
 }
 
 export const variants = [
-    buildVariant(2012),
-    buildVariant(1112),
-    buildVariant(1023),
-    buildVariant(2211),
-    buildVariant(3013),
-    buildVariant(4120),
+  buildVariant(2012),
+  buildVariant(1112),
+  buildVariant(1023),
+  buildVariant(2211),
+  buildVariant(3013),
+  buildVariant(4120),
 ];
 
 Hai a disposizione $\js{n}$ palline da tennis, e vuoi dividerle in gruppi in modo che il numero di palline in ogni gruppo sia una potenza di $10$ (in altre parole, un numero della forma $10^k$ per un qualche $k \geq 0$).
@@ -42,15 +43,11 @@ Qual è il numero minimo di gruppi che puoi realizzare utilizzando tutte le pall
 - [ ] $\js{wrong[3]}$
 
 > La risposta è $\js{correct}$.
-> 
+>
 > Il quesito chiede di determinare qual è il minimo numero di potenze di $10$ (eventualmente ripetute) che servono per sommare a $\js{n}$.
-> 
-> La rappresentazione decimale di un numero è un modo di scrivere tale numero come somma di potenze di $10$, ciascuna moltiplicata per la cifra corrispondente.
-> Ad esempio, il numero dato è uguale a $\js{decimal} = \js{n}$.
-> Quindi, sicuramente è sufficiente un numero di addendi pari alla somma delle cifre: $\js{sumDigits} = \js{correct}$.
-> 
-> Per mostrare che non si può fare di meglio, si può ragionare così.
-> Sicuramente non conviene usare più di $9$ potenze di $10$ con lo stesso esponente: infatti, se usassimo almeno $10$ volte l'addendo $10^k$, potremmo sostituirlo con una singola occorrenza di $10^{k + 1}$.
-> D'altra parte, l'unico modo di scrivere un numero come somma di potenze di $10$ moltiplicate per coefficienti **minori o uguali di $9$** è la sua rappresentazione decimale!
-> 
+>
+> La rappresentazione decimale di un numero è un modo di scrivere tale numero come somma di potenze di $10$, ciascuna moltiplicata per la cifra corrispondente. Ad esempio, il numero dato è uguale a $\js{decimal} = \js{n}$. Quindi, sicuramente è sufficiente un numero di addendi pari alla somma delle cifre: $\js{sumDigits} = \js{correct}$.
+>
+> Per mostrare che non si può fare di meglio, si può ragionare così. Sicuramente non conviene usare più di $9$ potenze di $10$ con lo stesso esponente: infatti, se usassimo almeno $10$ volte l'addendo $10^k$, potremmo sostituirlo con una singola occorrenza di $10^{k + 1}$. D'altra parte, l'unico modo di scrivere un numero come somma di potenze di $10$ moltiplicate per coefficienti **minori o uguali di $9$** è la sua rappresentazione decimale!
+>
 > ![Statistiche risposte]({n}.svg)
