--- a/src/scolastiche-2022/contest/contest.mdx
+++ b/src/scolastiche-2022/contest/contest.mdx
@@ -1,40 +1,43 @@
 import { M3CavalieriFurfanti, M6NumeroSpaccatoIn4, M8PotenzeDi10 } from "problemset";
 import { M4Domino, M5SommeCoppie, M7NumeriColorati } from "problemset";
-import { P5Mediana } from "problemset";
-import { P2StampaInteriLessicografico } from "problemset";
+import { P5Mediana, P8IncrementaDi7, P9TrovaElemento } from "problemset";
+import { P2StampaInteriLessicografico, P4SequenzaAlternante, P7Invariante } from "problemset";
 import { A3DueScatole } from "problemset";
 
 <Contest>
 
-  ## Sezione 1: Esercizi a carattere logico-matematico
-  <Section>
-    <Problem points={[5, 1, 0]} statement={M3CavalieriFurfanti} />
-    <Problem points={[5, 1, 0]} statement={M6NumeroSpaccatoIn4} />
-    <Problem points={[5, 1, 0]} statement={M8PotenzeDi10} />
+## Sezione 1: Esercizi a carattere logico-matematico
 
-    <Problem points={[5, 1, 0]} statement={M4Domino} />
-    <Problem points={[5, 1, 0]} statement={M5SommeCoppie} />
-    <Problem points={[5, 1, 0]} statement={M7NumeriColorati} />
-  </Section>
+<Section>
+  <Problem points={[5, 1, 0]} statement={M3CavalieriFurfanti} />
+  <Problem points={[5, 1, 0]} statement={M6NumeroSpaccatoIn4} />
+  <Problem points={[5, 1, 0]} statement={M8PotenzeDi10} />
 
-  ## Sezione 2: Esercizi di programmazione
-  <Section>
-    <Problem points={[5, 1, 0]} statement={P5Mediana} />
-    {/* <Problem points={[5, 1, 0]} statement={P8IncrementaDi7} />
-    <Problem points={[5, 1, 0]} statement={P9TrovaElemento} /> */}
+  <Problem points={[5, 1, 0]} statement={M4Domino} />
+  <Problem points={[5, 1, 0]} statement={M5SommeCoppie} />
+  <Problem points={[5, 1, 0]} statement={M7NumeriColorati} />
+</Section>
 
-    <Problem points={[5, 1, 0]} statement={P2StampaInteriLessicografico} />
-    {/* <Problem points={[5, 1, 0]} statement={P4SequenzaAlterante} />
-    <Problem points={[5, 1, 0]} statement={P7Invariante} /> */}
-  </Section>
+## Sezione 2: Esercizi di programmazione
 
-  ## Sezione 3: Esercizi a carattere algoritmico
-  <Section>
-    <Problem points={[5, 0, 0]} statement={A3DueScatole} />
-    {/* <Problem points={[5, 0, 0]} statement={A6Rettangli} />
+<Section>
+  <Problem points={[5, 1, 0]} statement={P5Mediana} />
+  <Problem points={[5, 1, 0]} statement={P8IncrementaDi7} />
+  <Problem points={[5, 1, 0]} statement={P9TrovaElemento} />
 
-    <Problem points={[5, 0, 0]} statement={A1ComponentiConnesse} />
-    <Problem points={[5, 0, 0]} statement={A2MaxMenoMin} /> */}
-  </Section>
+  <Problem points={[5, 1, 0]} statement={P2StampaInteriLessicografico} />
+  <Problem points={[5, 1, 0]} statement={P4SequenzaAlternante} />
+  <Problem points={[5, 1, 0]} statement={P7Invariante} />
+</Section>
+
+## Sezione 3: Esercizi a carattere algoritmico
+
+<Section>
+  <Problem points={[5, 0, 0]} statement={A3DueScatole} />
+  {/* <Problem points={[5, 0, 0]} statement={A6Rettangli} />
+
+  <Problem points={[5, 0, 0]} statement={A1ComponentiConnesse} />
+  <Problem points={[5, 0, 0]} statement={A2MaxMenoMin} /> */}
+</Section>
 
 </Contest>
