--- a/src/scolastiche-2021/contest/contest.mdx
+++ b/src/scolastiche-2021/contest/contest.mdx
@@ -1,5 +1,10 @@
 import { Logica2pt01, Logica2pt02 } from "problemset";
 import { Logica3pt03, Logica3pt04, Logica3pt05 } from "problemset";
+import { Prog2pt06, Prog2pt07, Prog2pt08 } from "problemset";
+import { Prog3pt09, Prog3pt10, Prog3pt11, Prog3pt12 } from "problemset";
+import { Algo2pt13, Algo2pt14, Algo2pt15 } from "problemset";
+import { Algo3pt16, Algo3pt17, Algo3pt18 } from "problemset";
+import { Algo4pt19, Algo4pt20 } from "problemset";
 
 <Contest>
 
@@ -15,19 +20,27 @@ import { Logica3pt03, Logica3pt04, Logica3pt05 } from "problemset";
 
 ## Sezione 2: Esercizi di programmazione
 
-{/* <Section>
-
-  <Problem points={[5, 1, 0]} statement={Prog1} />
-  <Problem points={[5, 1, 0]} statement={Prog2} />
-  <Problem points={[5, 1, 0]} statement={Prog3} />
-</Section> */}
+<Section>
+  <Problem points={[2, 0, 0]} statement={Prog2pt06} />
+  <Problem points={[2, 0, 0]} statement={Prog2pt07} />
+  <Problem points={[2, 0, 0]} statement={Prog2pt08} />
+  <Problem points={[3, 0, 0]} statement={Prog3pt09} />
+  <Problem points={[3, 0, 0]} statement={Prog3pt10} />
+  <Problem points={[3, 0, 0]} statement={Prog3pt11} />
+  <Problem points={[3, 0, 0]} statement={Prog3pt12} />
+</Section>
 
 ## Sezione 3: Esercizi a carattere algoritmico
 
-{/* <Section>
-
-  <Problem points={[5, 0, 0]} statement={Algo1} />
-  <Problem points={[5, 0, 0]} statement={Algo2} />
-</Section> */}
+<Section>
+  <Problem points={[2, 0, 0]} statement={Algo2pt13} />
+  <Problem points={[2, 0, 0]} statement={Algo2pt14} />
+  <Problem points={[2, 0, 0]} statement={Algo2pt15} />
+  <Problem points={[3, 0, 0]} statement={Algo3pt16} />
+  <Problem points={[3, 0, 0]} statement={Algo3pt17} />
+  <Problem points={[3, 0, 0]} statement={Algo3pt18} />
+  <Problem points={[4, 0, 0]} statement={Algo4pt19} />
+  <Problem points={[4, 0, 0]} statement={Algo4pt20} />
+</Section>
 
 </Contest>
