--- a/src/scolastiche-2022/contest/contest.mdx
+++ b/src/scolastiche-2022/contest/contest.mdx
@@ -2,7 +2,8 @@ import { M3CavalieriFurfanti, M6NumeroSpaccatoIn4, M8PotenzeDi10 } from "problem
 import { M4Domino, M5SommeCoppie, M7NumeriColorati } from "problemset";
 import { P5Mediana, P8IncrementaDi7, P9TrovaElemento } from "problemset";
 import { P2StampaInteriLessicografico, P4SequenzaAlternante, P7Invariante } from "problemset";
-import { A3DueScatole } from "problemset";
+import { A3DueScatole, A6Rettangoli } from "problemset";
+import { A1ComponentiConnesse } from "problemset";
 
 <Contest>
 
@@ -34,10 +35,8 @@ import { A3DueScatole } from "problemset";
 
 <Section>
   <Problem points={[5, 0, 0]} statement={A3DueScatole} />
-  {/* <Problem points={[5, 0, 0]} statement={A6Rettangli} />
-
+  <Problem points={[5, 0, 0]} statement={A6Rettangoli} />
   <Problem points={[5, 0, 0]} statement={A1ComponentiConnesse} />
-  <Problem points={[5, 0, 0]} statement={A2MaxMenoMin} /> */}
 </Section>
 
 </Contest>
