--- a/src/scolastiche-2022/contest/contest.mdx
+++ b/src/scolastiche-2022/contest/contest.mdx
@@ -3,7 +3,7 @@ import { M4Domino, M5SommeCoppie, M7NumeriColorati } from "problemset";
 import { P5Mediana, P8IncrementaDi7, P9TrovaElemento } from "problemset";
 import { P2StampaInteriLessicografico, P4SequenzaAlternante, P7Invariante } from "problemset";
 import { A3DueScatole, A6Rettangoli } from "problemset";
-import { A1ComponentiConnesse } from "problemset";
+import { A1ComponentiConnesse, A2MaxMenoMin } from "problemset";
 
 <Contest>
 
@@ -37,6 +37,7 @@ import { A1ComponentiConnesse } from "problemset";
   <Problem points={[5, 0, 0]} statement={A3DueScatole} />
   <Problem points={[5, 0, 0]} statement={A6Rettangoli} />
   <Problem points={[5, 0, 0]} statement={A1ComponentiConnesse} />
+  <Problem points={[5, 0, 0]} statement={A2MaxMenoMin} />
 </Section>
 
 </Contest>
