--- a/src/scolastiche-2022/contest/m-6-numero-spaccato-in-4/question.mdx
+++ b/src/scolastiche-2022/contest/m-6-numero-spaccato-in-4/question.mdx
@@ -1,59 +1,4 @@
-import _ from "lodash";
-
-export function buildVariant(n, wrong) {
-    console.assert(n.length === 8);
-
-    const exampleSplit = [
-        n.slice(0, 2),
-        n.slice(2, 3),
-        n.slice(3, 6),
-        n.slice(6, 8),
-    ];
-    const exampleSum = _(exampleSplit).map(Number).sum();
-
-    // Solution (sliding window)
-    const windows = _.range(4).map(i => n.slice(i, i+5)).map(Number);
-    const maxPiece = _.max(windows);
-    const maxPieceIdx = _.indexOf(windows, maxPiece);
-    const split = [
-        ...n.slice(0, maxPieceIdx),
-        maxPiece.toString(),
-        ...n.slice(maxPieceIdx+5),
-    ];
-    const maxSum = (
-        _(windows)
-            .map((w, i) => w + (
-                _(n)
-                    .split("")
-                    .filter((d, j) => (j < i || j >= i + 5))
-                    .map(Number)
-                    .sum()
-            ))
-            .max()
-    );
-    const correct = _.sum(maxSum.toString().split("").map(Number));
-    const result = _.sum(split.map(Number));
-
-
-    return {
-        n,
-        exampleSplit,
-        exampleSum,
-        correct,
-        wrong,
-        maxPiece,
-        split,
-        result,
-    };
-
-}
-
-export const variants = [
-  buildVariant("51498735", [15, 24, 26, 42]),
-  buildVariant("78234159", [12, 28, 39, 44]),
-  buildVariant("52729913", [7, 20, 29, 38]),
-  buildVariant("57123169", [7, 25, 34, 36]),
-];
+import variants from "./variants.py";
 
 Sandra prende il numero $\js{n}$, ne spezza le cifre in $4$ parti tutte maggiori di $0$, e calcola la somma dei $4$ numeri ottenuti. Ad esempio, una possibile suddivisione è $\js{exampleSplit[0]} + \js{exampleSplit[1]} + \js{exampleSplit[2]} + \js{exampleSplit[3]} = \js{exampleSum}$.
 
