--- a/src/scolastiche-2022/contest/p-4-sequenza-alternante/question.mdx
+++ b/src/scolastiche-2022/contest/p-4-sequenza-alternante/question.mdx
@@ -1,50 +1,4 @@
-import _ from "lodash";
-
-export function buildVariant(sequence) {
-    const minCorrect = _.max(sequence);
-    let maxCorrect = 0;
-    
-    const alternatedSeq = [];
-    const sortedSeq = _.sortBy([0, ...sequence]);
-
-    let i = 0, j = sortedSeq.length - 1;
-
-    while (i < j) {
-        alternatedSeq.push(sortedSeq[j]);
-        if (i + 1 != j) {
-            alternatedSeq.push(sortedSeq[i + 1]);
-        }
-        maxCorrect += 2 * sortedSeq[j] - sortedSeq[i] - sortedSeq[i + 1];
-        i += 1;
-        j -= 1;
-    }
-
-    const seqSum = _.sum(sequence);
-
-    return {
-        correct: { min: minCorrect, max: maxCorrect },
-        wrong: [
-            { min: 0, max: minCorrect },
-            { min: seqSum, max: maxCorrect },
-            { min: minCorrect, max: seqSum },
-            { min: 0, max: seqSum }
-        ],
-        seq: sequence,
-        sortedSeq: sortedSeq.slice(1),
-        alternatedSeq,
-        sumIncMin: _.zip(sortedSeq.slice(1), sortedSeq.slice(0, -1)).map(([x, y]) => Math.abs(x - y)).join(" + "),
-        sumIncMax: _.zip(alternatedSeq, [0, ...alternatedSeq.slice(0, -1)]).map(([x, y]) => Math.abs(x - y)).join(" + ")
-    };
-
-}
-
-export const variants = [
-  buildVariant([5, 3, 0, 3, 10]),
-  buildVariant([4, 0, 12, 8, 4]),
-  buildVariant([2, 7, 2, 9, 0]),
-  buildVariant([9, 11, 5, 5, 0]),
-  buildVariant([13, 0, 7, 10, 7]),
-];
+import variants from "./variants.py";
 
 Considera la seguente funzione, che prende come argomenti un intero **positivo** `n` e un array di interi **non-negativi** `v` di lunghezza `n`, e ritorna un intero:
 
