--- a/src/scolastiche-2022/contest/a-1-componenti-connesse/question.mdx
+++ b/src/scolastiche-2022/contest/a-1-componenti-connesse/question.mdx
@@ -1,141 +1,4 @@
-import _ from "lodash";
-
-export const N = 10;
-export const M = 17;
-export const edges = [
-  [0, 1],
-  [1, 2],
-  [2, 3],
-  [3, 4],
-  [4, 5],
-  [5, 0],
-  [0, 6],
-  [5, 6],
-  [6, 7],
-  [7, 1],
-  [7, 4],
-  [1, 4],
-  [1, 8],
-  [4, 8],
-  [8, 9],
-  [9, 2],
-  [9, 3],
-];
-
-export function buildVariant({ i: ii, labels, good_path, bad_path, P, Q, R }) {
-    const adj = Array(N).fill(0).map(x => []);
-
-    for (let i = 0; i < M; i++) {
-        adj[edges[i][0]].push([edges[i][1], labels[i]]);
-        adj[edges[i][1]].push([edges[i][0], labels[i]]);
-    }
-
-    let ans1 = 0, ans2 = 0;
-
-    const cc = [];
-    const vis_glob = Array(N).fill(false);
-
-    for (let i = 0; i < N; i++) {
-        let vis = Array(N).fill(false);
-        vis[i] = true;
-        for (let j = 0; j < N; j++) {
-            for (let n = 0; n < N; n++) {
-                if (!vis[n]) continue;
-                for (const [e, w] of adj[n]) {
-                    if (w == 1) vis[e] = true;
-                }
-            }
-        }
-
-        const card = _.sum(vis);
-        ans1 += card - 1;
-        if (!vis_glob[i]) {
-            for (let j = 0; j < N; j++) {
-                if (vis[j]) vis_glob[j] = true;
-            }
-            cc.push(card);
-        }
-    }
-
-    ans1 /= 2;
-
-    const cc_special = [];
-    const vis_glob_special = Array(N).fill(false);
-
-    for (let i = 0; i < N; i++) {
-        let vis = Array(N).fill(false);
-        vis[i] = true;
-        for (let j = 0; j < N; j++) {
-            for (let n = 0; n < N; n++) {
-                if (!vis[n]) continue;
-                for (const [e, w] of adj[n]) {
-                    for (const [ee, ww] of adj[e]) {
-                        if (w == ww) vis[ee] = true;
-                    }
-                }
-            }
-        }
-
-        const card = _.sum(vis);
-        ans2 += card - 1;
-        if (!vis_glob_special[i]) {
-            for (let j = 0; j < N; j++) {
-                if (vis[j]) vis_glob_special[j] = true;
-            }
-            cc_special.push(card);
-        }
-    }
-
-    ans2 /= 2;
-
-    const asy = `int[] labels = { ${labels} };`;
-    
-    return {
-        i: ii,
-        ans1,
-        ans2,
-        good_path,
-        bad_path,
-        P,
-        Q,
-        R,
-        cc,
-        cc_special,
-        sum_fracs: cc.map(x => `\\frac{${x} \\cdot (${x} - 1)}{2}`).join(" + "),
-        sum_fracs_special: cc_special.map(x => `\\frac{${x} \\cdot (${x} - 1)}{2}`).join(" + "),
-    };
-
-}
-
-export const variants = [
-  buildVariant({
-    i: 0,
-    labels: [1, 2, 1, 3, 1, 2, 3, 1, 1, 3, 1, 2, 1, 3, 1, 2, 3],
-    good_path: "JDEBC",
-    bad_path: "GABIE",
-    P: "B",
-    Q: "J",
-    R: "C",
-  }),
-  buildVariant({
-    i: 1,
-    labels: [2, 2, 2, 1, 3, 1, 1, 1, 1, 2, 3, 1, 3, 3, 1, 3, 2],
-    good_path: "FEHBC",
-    bad_path: "CDEBA",
-    P: "A",
-    Q: "H",
-    R: "B",
-  }),
-  buildVariant({
-    i: 2,
-    labels: [3, 1, 2, 2, 2, 1, 3, 3, 1, 2, 3, 1, 1, 1, 1, 3, 2],
-    good_path: "AGFED",
-    bad_path: "JCDEH",
-    P: "F",
-    Q: "D",
-    R: "E",
-  }),
-];
+import variants from "./variants.py";
 
 La città di Remontagna ha $10$ piazze collegate da strade a doppio senso.
 
@@ -147,7 +10,7 @@ Le strade sono di tre tipi:
 - _viali_, evidenziati in doppia linea verde nella figura;
 - _sentieri_, evidenziati in linea tratteggiata blu nella figura.
 
-![La mappa di Remontagna](city.asy)
+![La mappa di Remontagna](city.asy?v=variants.py)
 
 1. Quante sono le coppie di piazze **distinte** che sono raggiungibili l'una dall'altra **usando solo vie** (strade in linea continua rossa)? Le coppie si intendono **non ordinate**: ad esempio, le coppie $(\textsf{A}, \, \textsf{B})$ e $(\textsf{B}, \, \textsf{A})$ vanno contate una sola volta.
 
@@ -179,7 +42,7 @@ Al contrario, $\textsf{\js{bad_path}}$ **non** è un bel percorso, poiché le pr
 >
 > Immaginiamo di aggiungere della strade _speciali_. Una strada speciale collega due piazze che possono essere raggiunte l'una dall'altra percorrendo **esattamente** due strade normali dello stesso tipo (cioè due vie, due viali o due sentieri). Le strade speciali sono mostrate in figura:
 >
-> ![Strade speciali evidenziate sulla mappa](special-roads.asy)
+> ![Strade speciali evidenziate sulla mappa](special-roads.asy?v=variants.py)
 >
 > Ad esempio, c'è una strada speciale che collega le piazze $\textsf{\js{P}}$ e $\textsf{\js{Q}}$ perché si possono raggiungere l'una dall'altra attraversando due viali (e la piazza $\textsf{\js{R}}$).
 >
