--- a/src/scolastiche-2022/contest/a-6-rettangoli/question.mdx
+++ b/src/scolastiche-2022/contest/a-6-rettangoli/question.mdx
@@ -1,130 +1,14 @@
-import _ from "lodash";
-
-export const n = 8;
-
-export function buildVariant({ i, table, x, y, z, w, t, k }) {
-    const content = _(table).flatten().sortBy().value();
-
-    console.assert(content.length === n * n);
-    console.assert(content[0] === 1 && content.at(-1) === n * n);
-    console.assert(_(content).uniq().size() === n * n);
-
-    let ans1 = 0;
-    let ans2 = 0;
-
-    for (let x = 0; x < n; x++) {
-        for (let y = 0; y < n; y++) {
-            for (let z = x + 1; z <= n; z++) {
-                for (let w = y + 1; w <= n; w++) {
-                    const rect = _(table)
-                        .slice(x, z)
-                        .map((row) => row.slice(y, w))
-                        .flatten()
-                        .sortBy()
-                        .value();
-
-                    if (rect.at(-1) <= rect.length + 1) {
-                        if (rect.length <= 5) {
-                            ans1++;
-                        } else {
-                            ans2++;
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    const asy = `
-        int n = ${n};
-        int x = ${x}, y = ${y}, z = ${z}, w = ${w};
-        int k = ${k};
-        int[][] table = {
-            ${table.map((row) =>`{ ${row} }`)}
-        };
-    `;
-
-    return {
-        asy,
-        ans1,
-        ans2,
-        i,
-        t,
-        k,
-        nums: _.range(1, 8).filter((i) => i !== t).join(", \\, "),
-    };
-
-}
-
-export const variants = [
-  buildVariant({
-    i: 0,
-    table: [
-      [59, 63, 58, 62, 64, 61, 60, 52],
-      [54, 20, 25, 22, 21, 23, 24, 16],
-      [55, 18, 15, 9, 5, 7, 6, 27],
-      [57, 19, 13, 4, 2, 1, 3, 26],
-      [53, 17, 11, 14, 12, 8, 10, 29],
-      [47, 32, 30, 28, 33, 31, 35, 34],
-      [56, 43, 40, 36, 37, 41, 39, 38],
-      [51, 49, 48, 45, 50, 46, 44, 42],
-    ],
-    x: 4,
-    y: 2,
-    z: 6,
-    w: 3,
-    t: 4,
-    k: 15,
-  }),
-  buildVariant({
-    i: 1,
-    table: [
-      [60, 61, 56, 63, 62, 58, 64, 59],
-      [47, 51, 54, 57, 53, 55, 52, 50],
-      [43, 41, 39, 38, 40, 28, 42, 49],
-      [27, 16, 8, 17, 14, 21, 20, 44],
-      [25, 10, 13, 12, 11, 18, 23, 37],
-      [29, 5, 2, 1, 4, 15, 19, 48],
-      [26, 9, 7, 3, 6, 24, 22, 45],
-      [34, 30, 36, 32, 35, 33, 31, 46],
-    ],
-    x: 2,
-    y: 5,
-    z: 4,
-    w: 6,
-    t: 5,
-    k: 16,
-  }),
-  buildVariant({
-    i: 2,
-    table: [
-      [62, 48, 32, 2, 7, 5, 10, 30],
-      [64, 52, 41, 1, 3, 4, 13, 26],
-      [44, 43, 36, 8, 11, 9, 6, 28],
-      [59, 56, 39, 12, 16, 17, 14, 31],
-      [61, 47, 40, 20, 21, 19, 18, 27],
-      [60, 53, 37, 24, 15, 25, 23, 22],
-      [63, 46, 29, 33, 35, 38, 42, 34],
-      [58, 51, 49, 54, 57, 55, 45, 50],
-    ],
-    x: 3,
-    y: 0,
-    z: 5,
-    w: 1,
-    t: 6,
-    k: 16,
-  }),
-];
+import variants from "./variants.py";
 
 Ti viene data la tabella $8 \times 8$ mostrata sotto, che contiene tutti i numeri interi da $1$ a $64$:
 
-![Tabella 8 per 8 riempita con i numeri da 1 a 64](table.asy)
+![Tabella 8 per 8 riempita con i numeri da 1 a 64](table.asy?v=variants.py)
 
 Un _rettangolo_ è una sotto-tabella ottenuta intersecando un insieme di righe consecutive e un insieme di colonne consecutive. Nota che anche una singola casella è un rettangolo. Diciamo che un rettangolo è _interessante_ se, detto $N$ il numero di caselle da cui è formato, esso contiene tutti i numeri da $1$ a $N + 1$, **tranne uno**.
 
 Ad esempio, il rettangolo evidenziato nella figura che segue è interessante: esso è formato da $N = 6$ caselle e contiene i numeri $\js{nums}$, ovvero tutti i numeri tra $1$ e $N + 1 = 7$ tranne il $\js{t}$.
 
-![Stessa tabella di prima, in cui è evidenziato un rettangolo 2 per 3](highlighted-rectangle.asy)
+![Stessa tabella di prima, in cui è evidenziato un rettangolo 2 per 3](highlighted-rectangle.asy?v=variants.py)
 
 1. Quanti sono i rettangoli interessanti formati da **al massimo** $5$ caselle?
 
@@ -136,7 +20,7 @@ Ad esempio, il rettangolo evidenziato nella figura che segue è interessante: es
 >
 > I rettangoli interessanti formati da al massimo $5$ caselle sicuramente contengono solo numeri minori o uguali di $6$, e quindi sono interamente contenuti nella regione evidenziata in grigio:
 >
-> ![Tabella con numeri minori o uguali di 6 colorati in grigio](highlighted-small.asy)
+> ![Tabella con numeri minori o uguali di 6 colorati in grigio](highlighted-small.asy?v=variants.py)
 >
 > Pertanto, possiamo controllare uno per uno tutti questi rettangoli, e per ciascuno determinare se è interessante oppure no. Nota, in particolare, che i rettangoli $1 \times 1$ formati dalla singola casella con il numero $1$ e dalla singola casella con il numero $2$ sono sicuramente interessanti (perché?).
 >
@@ -156,7 +40,7 @@ Ad esempio, il rettangolo evidenziato nella figura che segue è interessante: es
 >
 > Ad esempio, i rettangoli formati da $k = \js{k}$ caselle sono contenuti nella regione evidenziata in grigio nella figura qui sotto (costituita da tutti i numeri tra $1$ e $\js{k+1}$), ed è facile notare (a colpo d'occhio) che c'è esattamente un tale rettangolo formato da esattamente $\js{k}$ caselle, quello con il bordo spesso.
 >
-> ![Tabella con numeri da 1 a k+1 colorati in grigio e rettangolo evidenziato con bordo spesso](highlighted-big.asy)
+> ![Tabella con numeri da 1 a k+1 colorati in grigio e rettangolo evidenziato con bordo spesso](highlighted-big.asy?v=variants.py)
 >
 > (Per molti valori di $k$, ovviamente, non ci sarà nessun rettangolo interessante formato da $k$ caselle.)
 >
