--- a/src/scolastiche-2022/contest/a-1-componenti-connesse/question.mdx
+++ b/src/scolastiche-2022/contest/a-1-componenti-connesse/question.mdx
@@ -12,7 +12,7 @@ Le strade sono di tre tipi:
 
 ![La mappa di Remontagna](city.asy?v=variants.py)
 
-1. Quante sono le coppie di piazze **distinte** che sono raggiungibili l'una dall'altra **usando solo vie** (strade in linea continua rossa)? Le coppie si intendono **non ordinate**: ad esempio, le coppie $(\textsf{A}, \, \textsf{B})$ e $(\textsf{B}, \, \textsf{A})$ vanno contate una sola volta.
+Quante sono le coppie di piazze **distinte** che sono raggiungibili l'una dall'altra **usando solo vie** (strade in linea continua rossa)? Le coppie si intendono **non ordinate**: ad esempio, le coppie $(\textsf{A}, \, \textsf{B})$ e $(\textsf{B}, \, \textsf{A})$ vanno contate una sola volta.
 
 ?> {ans1}
 
@@ -34,7 +34,7 @@ Ad esempio, un bel percorso è $\textsf{\js{good_path}}$, ovvero quello che part
 
 Al contrario, $\textsf{\js{bad_path}}$ **non** è un bel percorso, poiché le prime due strade non sono dello stesso tipo.
 
-2. Quante sono le coppie di piazze **distinte** che si possono raggiungere l'una dall'altra attraverso un bel percorso? Anche in questo caso, indendiamo le coppie come **non ordinate**. Stavolta si possono usare tutti i tipi di strade.
+Quante sono le coppie di piazze **distinte** che si possono raggiungere l'una dall'altra attraverso un bel percorso? Anche in questo caso, indendiamo le coppie come **non ordinate**. Stavolta si possono usare tutti i tipi di strade.
 
 ?> {ans2}
 
