--- a/src/scolastiche-2022/contest/a-2-max-meno-min/question.mdx
+++ b/src/scolastiche-2022/contest/a-2-max-meno-min/question.mdx
@@ -10,7 +10,7 @@ Un _intervallo_ è una sequenza di numeri consecutivi nella sequenza data (forma
 
 Per ogni $k = 0, \, \dots, \, 1000$, chiamiamo $L_k$ la **massima** lunghezza di un intervallo $J$ tale che $\max(J) - \min(J) \le k$. Nota che $J$ può essere formato anche da un solo numero, nel qual caso $\max(J) = \min(J)$.
 
-1. Quanto vale $L_{\js{k}}$?
+Quanto vale $L_{\js{k}}$?
 
 ?> {ans1}
 
@@ -28,7 +28,7 @@ Per ogni $k = 0, \, \dots, \, 1000$, chiamiamo $L_k$ la **massima** lunghezza di
 
 Immagina di scrivere su un foglio i numeri $L_0, \, L_1, \, \dots, \, L_{1000}$.
 
-2. Quanti numeri **distinti** compaiono sul foglio?
+Quanti numeri **distinti** compaiono sul foglio?
 
 ?> {ans2}
 
