--- a/src/scolastiche-2022/contest/a-3-due-scatole/question.mdx
+++ b/src/scolastiche-2022/contest/a-3-due-scatole/question.mdx
@@ -10,7 +10,7 @@ Come premio per il tuo acquisto ingente, ti è stata offerta in regalo una maxi 
 
 Vuoi distribuire le $10$ barrette in due scatole, in modo che ci siano **esattamente** $5$ barrette per scatola. Poi darai una scatola a tuo fratello e terrai l'altra per te. Sai che tuo fratello sceglierà sicuramente la scatola con barrette di peso totale maggiore (se i pesi delle due scatole sono uguali, ne sceglie una qualunque). Ovviamente, vorresti tenere per te il **massimo peso** possibile.
 
-1. Se scegli la distribuzione migliore, qual è il peso totale delle barrette di cioccolato nella **scatola che resta a te**?
+Se scegli la distribuzione migliore, qual è il peso totale delle barrette di cioccolato nella **scatola che resta a te**?
 
 ?> {ans1}
 
@@ -26,7 +26,7 @@ Vuoi distribuire le $10$ barrette in due scatole, in modo che ci siano **esattam
 
 Tuttavia, prima di distribuire le barrette ti viene voglia di cioccolato, e decidi di mangiare un pezzo della maxi barretta di peso $2022$. Per non destare sospetti, vuoi che la risposta alla domanda 1 rimanga la stessa anche dopo aver mangiato parte della maxi barretta.
 
-1. Qual è il **massimo peso** di un pezzo di maxi barretta che puoi mangiare senza che la risposta alla domanda precedente cambi?
+Qual è il **massimo peso** di un pezzo di maxi barretta che puoi mangiare senza che la risposta alla domanda precedente cambi?
 
 ?> {ans2}
 
