--- a/src/fibonacci-2023-secondarie/contest/contest.mdx
+++ b/src/fibonacci-2023-secondarie/contest/contest.mdx
@@ -1,7 +1,6 @@
-import { M3PermutaSottrai, M5PallineTricolori, M5PallineTricoloriFib, M6StringaOii, M6StringaOiiFib, M8GiocoOca, M9EasyRettangoliCorniceFib, M9HardRettangoliCornice, M12CavalieriFurfanti, M14Bigliettino, M17QuasiOrdinato } from "problemset";
-import { P8SostituisciRiga, P7TerzoNumero, P7TerzoNumeroFib, P2SommaZero, P6WalkBack, P3StepInvariante, P4IntervalliNascosti, P10RiordinaIstruzioni, P9MangiaCarota } from "problemset";
-import { P5PiuStampato, P11OggettiIfelse } from "problemset";
-import { A1OrdinaColonne, A8GrafoDisconnesso, A14RettangoliCornice, A5CancellaPermutazioneFib, A5CancellaPermutazione, A6MuroMattoni } from "problemset";
+import { M5PallineTricoloriFib, M6StringaOiiFib, M8GiocoOca } from "problemset";
+import { P7TerzoNumeroFib, P10RiordinaIstruzioni, P11OggettiIfelse } from "problemset";
+import { A14RettangoliCornice, A5CancellaPermutazioneFib } from "problemset";
 
 <Contest>
 
