--- a/src/scolastiche-2023/contest/contest.mdx
+++ b/src/scolastiche-2023/contest/contest.mdx
@@ -1,6 +1,25 @@
-import { M5PallineTricolori, M6StringaOii, M9HardRettangoliCornice, M12CavalieriFurfanti, M17QuasiOrdinato } from "problemset";
-import { P8SostituisciRiga, P7TerzoNumero, P2SommaZero, P6WalkBack, P3StepInvariante, P4IntervalliNascosti,  P5PiuStampato } from "problemset";
-import { A1OrdinaColonne, A8GrafoDisconnesso, A5CancellaPermutazione, A6MuroMattoni } from "problemset";
+import {
+  M5PallineTricolori,
+  M6StringaOii,
+  M9HardRettangoliCornice,
+  M12CavalieriFurfanti,
+  M17QuasiOrdinato,
+} from "problemset";
+import {
+  P8SostituisciRiga,
+  P7TerzoNumero,
+  P2SommaZero,
+  P6WalkBack,
+  P3StepInvariante,
+  P4IntervalliNascosti,
+  P5PiuStampato,
+} from "problemset";
+import {
+  A1OrdinaColonne,
+  A8GrafoDisconnesso,
+  A5CancellaPermutazione,
+  A6MuroMattoni,
+} from "problemset";
 
 <Contest>
 
@@ -23,7 +42,7 @@ import { A1OrdinaColonne, A8GrafoDisconnesso, A5CancellaPermutazione, A6MuroMatt
   <Problem points={[5, 1, 0]} statement={P6WalkBack} />
   <Problem points={[5, 1, 0]} statement={P3StepInvariante} />
   <Problem points={[5, 1, 0]} statement={P4IntervalliNascosti} />
-  <Problem points={[5, 1, 0]} statement={P5PiuStampato} />  
+  <Problem points={[5, 1, 0]} statement={P5PiuStampato} />
 </Section>
 
 ## Sezione 3: Esercizi a carattere algoritmico
