--- a/src/fibonacci-2023-primarie/contest/contest.mdx
+++ b/src/fibonacci-2023-primarie/contest/contest.mdx
@@ -1,9 +1,4 @@
-import {
-  M6StringaOiiFib,
-  M8GiocoOca,
-  M9EasyRettangoliCorniceFib,
-  M14Bigliettino,
-} from "problemset";
+import { M6StringaOiiFib, M8GiocoOca, M9EasyRettangoliCorniceFib, M14Bigliettino } from "problemset";
 import { P10RiordinaIstruzioni, P9MangiaCarota, P11OggettiIfelse } from "problemset";
 import { A5CancellaPermutazioneFib } from "problemset";
 
