--- a/src/scolastiche-2023/contest/contest.mdx
+++ b/src/scolastiche-2023/contest/contest.mdx
@@ -14,12 +14,7 @@ import {
   P4IntervalliNascosti,
   P5PiuStampato,
 } from "problemset";
-import {
-  A1OrdinaColonne,
-  A8GrafoDisconnesso,
-  A5CancellaPermutazione,
-  A6MuroMattoni,
-} from "problemset";
+import { A1OrdinaColonne, A8GrafoDisconnesso, A5CancellaPermutazione, A6MuroMattoni } from "problemset";
 
 <Contest>
 
