--- a/src/fibonacci2-demo/contest/s-1-apri-porte/question.mdx
+++ b/src/fibonacci2-demo/contest/s-1-apri-porte/question.mdx
@@ -4,7 +4,7 @@ import testcases from "./testcases.py";
 import Visualizer from "./visualizer.jsx";
 
 Tip-Tap vorrebbe tanto mangiare la sua carota, prima però deve raggiungerla!
-A separarlo dal suo obbiettivo ci sono $N$ rocce, alcune divise da porte chiuse.
+A separarlo dal suo obiettivo ci sono $N$ rocce, alcune divise da porte chiuse.
 Tip-Tap sa compiere le seguenti azioni:
 
 - `avanza`: salta alla roccia più vicina a destra, solo se non c'è una porta chiusa in mezzo.
