minor sul testo di s4

--- a/src/fibonacci2-demo/contest/s-4-muro/question.mdx
+++ b/src/fibonacci2-demo/contest/s-4-muro/question.mdx
@@ -9,7 +9,7 @@ che seguono i pannelli con la supervisione di Carol, l'artista della fattoria.
 
 Bunny utilizzerà un colore alla volta nell'ordine che gli viene dato da Carol. Inoltre, Carol
 sa quali colori sono i più belli, e quindi vuole che il colore $i$-esimo sia utilizzato per
-dipingere un rettangolo largo $L_i$ pannelli in funzione della sua bellezza.
+dipingere un rettangolo largo $L_i$ pannelli.
 
 Bunny è però libero di scegliere dove posizionare ogni rettangolo nel muro, e cioè da quale
 pannello cominciare a dipingere, a patto di non dipingere oltre i bordi del muro.
