--- a/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-1-apri-porte/question.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-1-apri-porte/question.mdx
@@ -8,7 +8,7 @@ A separarlo dal suo obiettivo ci sono $N$ rocce, alcune divise da porte chiuse.
 Tip-Tap sa compiere le seguenti azioni:
 
 - `avanza`: salta alla roccia più vicina a destra, solo se non c'è una porta chiusa in mezzo.
-- `vedi porta`: condizione vera se di fianco a te c'è una porta chiusa.
+- `vedi porta chiusa`: condizione vera se di fianco a te c'è una porta chiusa.
 - `apri porta`: apri la porta a destra, ma solo se è di fianco a te.
 - `mangia carota`: mangia la carota a destra (solo se è di fianco a te) e termina il programma.
 
