--- a/src/fibonacci-primarie/2023-seconda-fase/contest/s-1-ordina-palloni/question.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase/contest/s-1-ordina-palloni/question.mdx
@@ -31,3 +31,5 @@ Scrivi un programma che consenta a Tip-Tap di sistemare tutti i suoi palloni!
 >
 > Secondo questo programma, per ognuno degli $N$ palloni che Tip-Tap deve sistemare, il protagonista
 > controlla se il prossimo pallone è da calcio o gonfio. Se sì lo tiene, altrimenti lo butta.
+>
+> ![primarie](primarie.asy)
