--- a/src/fibonacci-primarie/2023-seconda-fase/contest/s-3-squadre-basket/question.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase/contest/s-3-squadre-basket/question.mdx
@@ -38,3 +38,5 @@ Aiuta Bunny a fare le squadre per la partita!
 > Se i due primi della fila hanno la stessa altezza, è possibile prenderli entrambi per
 > ingrandire la squadra. Se non hanno la stessa altezza Bunny scarta il più basso dei due,
 > visto che non ha più speranze di trovare un avversario della stessa altezza nell'altra fila.
+>
+> ![primarie](primarie.asy) ![secondarie](secondarie.asy)
