--- a/src/fibonacci-primarie/2023-seconda-fase/contest/s-4-torri-gemelle/question.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase/contest/s-4-torri-gemelle/question.mdx
@@ -42,3 +42,5 @@ Aiuta Tip-Tap a completare la tettoia come previsto!
 > posso sicuramente farlo stare in una delle due colonne. Mettendolo, abbiamo ridotto sia l'altezza
 > totale da costruire che l'altezza totale dei blocchetti di $M$, quindi è ancora vero che
 > l'altezza totale dei blocchetti è uguale all'altezza totale delle colonne da costruire.
+>
+> ![secondarie](secondarie.asy)
