--- a/src/fibonacci-secondarie/2023-prima-fase/contest/contest.mdx
+++ b/src/fibonacci-secondarie/2023-prima-fase/contest/contest.mdx
@@ -1,6 +1,6 @@
 import { M5PallineTricoloriFib, M6StringaOiiFib, M8GiocoOca } from "problemset";
 import { P7TerzoNumeroFib, P10RiordinaIstruzioni, P11OggettiIfelse } from "problemset";
-import { A14RettangoliCornice, A5CancellaPermutazioneFib } from "problemset";
+import { A5CancellaPermutazioneFib, A14RettangoliCornice } from "problemset";
 
 <Contest>
 
