--- a/src/fibonacci-secondarie/2023-terza-fase/contest/s-4-superbunny/question.mdx
+++ b/src/fibonacci-secondarie/2023-terza-fase/contest/s-4-superbunny/question.mdx
@@ -1,9 +1,9 @@
-import initialBlocks from "./initialBlocks.json";
 import customBlocks from "./customBlocks.yaml";
+import initialBlocks from "./initialBlocks.json";
 import testcases from "./testcases.py";
 import Visualizer from "./visualizer.jsx";
 
-Il nuovissimo videogioco *SuperBunny* è finalmente in commercio! Bunny, il protagonista del videogioco, in ogni livello deve superare $N$ ostacoli numerati da $1$ ad $N$.
+Il nuovissimo videogioco _SuperBunny_ è finalmente in commercio! Bunny, il protagonista del videogioco, in ogni livello deve superare $N$ ostacoli numerati da $1$ ad $N$.
 Su ogni ostacolo ci sono $2$ pedane (ad altezze diverse) su cui Bunny può saltare: l'ostacolo numero $i$ è fatto da una pedana più in alto che si trova ad una altezza di $A_i$ metri, e da una pedana più in basso ad un'altezza di $B_i$ metri.
 
 Bunny parte da terra ad altezza $0$ e deve per prima cosa saltare sull'ostacolo numero $1$ scegliendo una delle due pedane. Una volta raggiunto l'ostacolo $1$, sceglierà una delle due pedane dell'ostacolo successivo, il $2$, e ci salterà sopra.
@@ -12,7 +12,7 @@ Infatti, più il salto è grande e più tempo ci vuole per farlo. Per saltare da
 
 _**Nota:** la differenza assoluta tra $h$ e $k$, in formule $|h - k|$, indica il valore della differenza tra $h$ e $k$ ignorando il segno: quindi $h - k$ se $h > k$ o $k - h$ se $k > h$._
 
-Il tempo totale impiegato per completare un livello è la somma dei tempi impiegati in ogni salto.  Quanti secondi servono a Bunny per completare il livello?
+Il tempo totale impiegato per completare un livello è la somma dei tempi impiegati in ogni salto. Quanti secondi servono a Bunny per completare il livello?
 Puoi usare questi blocchi:
 
 - `N`: il numero $N$ di ostacoli.
