--- a/src/scolastiche/2023/contest/contest.mdx
+++ b/src/scolastiche/2023/contest/contest.mdx
@@ -6,15 +6,20 @@ import {
   M17QuasiOrdinato,
 } from "problemset";
 import {
-  P8SostituisciRiga,
-  P7TerzoNumero,
   P2SommaZero,
-  P6WalkBack,
   P3StepInvariante,
   P4IntervalliNascosti,
   P5PiuStampato,
+  P6WalkBack,
+  P7TerzoNumero,
+  P8SostituisciRiga,
 } from "problemset";
-import { A1OrdinaColonne, A8GrafoDisconnesso, A5CancellaPermutazione, A6MuroMattoni } from "problemset";
+import {
+  A1OrdinaColonne,
+  A5CancellaPermutazione,
+  A6MuroMattoni,
+  A8GrafoDisconnesso,
+} from "problemset";
 
 <Contest>
 
