--- a/src/fibonacci-primarie/2023-prima-fase/contest/contest.mdx
+++ b/src/fibonacci-primarie/2023-prima-fase/contest/contest.mdx
@@ -1,5 +1,10 @@
-import { M6StringaOiiFib, M8GiocoOca, M9EasyRettangoliCorniceFib, M14Bigliettino } from "problemset";
-import { P10RiordinaIstruzioni, P9MangiaCarota, P11OggettiIfelse } from "problemset";
+import {
+  M6StringaOiiFib,
+  M8GiocoOca,
+  M9EasyRettangoliCorniceFib,
+  M14Bigliettino,
+} from "problemset";
+import { P9MangiaCarota, P10RiordinaIstruzioni, P11OggettiIfelse } from "problemset";
 import { A5CancellaPermutazioneFib } from "problemset";
 
 <Contest>
