--- a/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-1-apri-porte/question.mdx
+++ b/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-1-apri-porte/question.mdx
@@ -1,5 +1,5 @@
-import customBlocks from "./customBlocks.yaml";
 import initialBlocks from "./initialBlocks.json";
+import customBlocks from "./s1.blocks.yaml";
 import testcases from "./testcases.py";
 import Visualizer from "./visualizer.jsx";
 
