--- a/src/fibonacci-secondarie/2023-terza-fase/contest/s-1-cioccolato/question.mdx
+++ b/src/fibonacci-secondarie/2023-terza-fase/contest/s-1-cioccolato/question.mdx
@@ -1,5 +1,5 @@
-import customBlocks from "./customBlocks.yaml";
 import initialBlocks from "./initialBlocks.json";
+import customBlocks from "./s1.blocks.yaml";
 import testcases from "./testcases.py";
 import Visualizer from "./visualizer.jsx";
 
